# arbitrage-notifier

./: .gitignore
src/arbitrage-bot/: pyproject.toml
src/arbitrage-bot/arbitrage_bot/: constants.py  main.py  settings.py  telegram_notifier.py  utils.py
src/arbitrage-bot/arbitrage_bot/exchanges/: __init__.py  base.py  bybit.py  mexc.py
src/arbitrage-bot/arbitrage_bot/models/: __init__.py  spread_info.py  ticker_data.py  validators.py
src/arbitrage-bot/arbitrage_bot/telegram/: __init__.py  exceptions.py  telegram_api_wrapper.py
