[build-system]
requires = ["setuptools >= 75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage-bot"
version = "0.0.0"
dependencies = [
    "aiohttp",
    "pydantic",
    "pydantic-settings",
    "tenactity~=9.0.0"
]

requires-python = ">=3.13"


[project.scripts]
arbitrage-bot = "arbitrage_bot.main:main"